Registro e Login de Usuário

--- a/src/services/NSE.Identidade.Api/appsettings.json
+++ b/src/services/NSE.Identidade.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-49TFGL4;Database=NerdStoreEnterpriseDB;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
