--- a/src/services/NSE.Cliente.Api/appsettings.Development.json
+++ b/src/services/NSE.Cliente.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-49TFGL4;Database=NerdStoreEnterpriseDB;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
