Trabalhando com eventos

--- a/src/services/NSE.Cliente.Api/NSE.Clientes.Api.csproj
+++ b/src/services/NSE.Cliente.Api/NSE.Clientes.Api.csproj
@@ -25,5 +25,9 @@
     <ProjectReference Include="..\..\building-blocks\NSE.Core\NSE.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\Queries\" />
+  </ItemGroup>
+
 
 </Project>
