--- a/src/services/NSE.Cliente.Api/appsettings.Development.json
+++ b/src/services/NSE.Cliente.Api/appsettings.Development.json
@@ -2,6 +2,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-49TFGL4;Database=NerdStoreEnterpriseDB;Integrated Security=True"
   },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
+  "AppSettings": {
+    "Secret": "MEUSEGREDOSUPERSECRETO",
+    "ExpiracaoHoras": 2,
+    "Emissor": "MeuSistema",
+    "ValidoEm": "https://localhost"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
