Estrutura de dados da API

--- a/src/services/NSE.Carrinho.Api/appsettings.Development.json
+++ b/src/services/NSE.Carrinho.Api/appsettings.Development.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-49TFGL4;Database=NerdStoreEnterpriseDB;Integrated Security=True"
+  },
+  "AppSettings": {
+    "Secret": "MEUSEGREDOSUPERSECRETO",
+    "ExpiracaoHoras": 2,
+    "Emissor": "MeuSistema",
+    "ValidoEm": "https://localhost"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
