Implementando o carrinho no front-end - pt II

--- a/src/web/NSE.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "AutenticacaoUrl": "https://localhost:44350",
   "CatalogoUrl": "https://localhost:44388",
+  "CarrinhoUrl": "https://localhost:44322",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
