Consumindo serviços pelo BFF - pt I

--- a/src/api gateways/NSE.Bff.Compras/NSE.Bff.Compras.csproj
+++ b/src/api gateways/NSE.Bff.Compras/NSE.Bff.Compras.csproj
@@ -9,7 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
   </ItemGroup>
 
@@ -17,6 +16,7 @@
     <ProjectReference Include="..\..\building-blocks\NSE.Core\NSE.Core.csproj" />
     <ProjectReference Include="..\..\building-blocks\NSE.MessageBus\NSE.MessageBus.csproj" />
     <ProjectReference Include="..\..\building-blocks\NSE.WebAPI.Core\NSE.WebAPI.Core.csproj" />
+    <ProjectReference Include="..\..\web\NSE.WebApp.MVC\NSE.WebApp.MVC.csproj" />
   </ItemGroup>
 
 
