--- a/src/web/NSE.WebApp.MVC/appsettings.Development.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.Development.json
@@ -2,6 +2,7 @@
   "AutenticacaoUrl": "https://localhost:44350",
   "CatalogoUrl": "https://localhost:44388",
   "CarrinhoUrl": "https://localhost:44322",
+  "ComprasBffUrl": "https://localhost:44302",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
