--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@
 /src/building-blocks/NSE.MessageBus/obj
 /src/api gateways/NSE.Bff.Compras/bin/Debug/netcoreapp3.1
 /src/api gateways/NSE.Bff.Compras/obj
+/src/services/NSE.Pedidos.Domain/bin/Debug/netcoreapp3.1
+/src/services/NSE.Pedidos.Domain/obj
+/src/services/NSE.Pedidos.Infra/bin/Debug/netcoreapp3.1
+/src/services/NSE.Pedidos.Infra/obj
