--- a/src/services/NSE.Pedido.Api/appsettings.Development.json
+++ b/src/services/NSE.Pedido.Api/appsettings.Development.json
@@ -1,9 +1,21 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-49TFGL4;Database=NerdStoreEnterpriseDB;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "Secret": "MEUSEGREDOSUPERSECRETO",
+    "ExpiracaoHoras": 2,
+    "Emissor": "MeuSistema",
+    "ValidoEm": "https://localhost"
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   }
 }
