--- a/src/api gateways/NSE.Bff.Compras/appsettings.Development.json
+++ b/src/api gateways/NSE.Bff.Compras/appsettings.Development.json
@@ -9,8 +9,9 @@
   "AllowedHosts": "*",
   "CatalogoUrl": "https://localhost:44388",
   "CarrinhoUrl": "https://localhost:44322",
-  "PedidoUrl": "https://localhost:44388",
+  "PedidoUrl": "https://localhost:44352",
   "PagamentoUrl": "https://localhost:44353",
+  "ClienteUrl": "https://localhost:44312",
 
   "MessageQueueConnection": {
     "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
