--- a/src/services/NSE.Pedido.Api/NSE.Pedidos.Api.csproj
+++ b/src/services/NSE.Pedido.Api/NSE.Pedidos.Api.csproj
@@ -21,13 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\Commands\" />
     <Folder Include="Application\Events\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\building-blocks\NSE.MessageBus\NSE.MessageBus.csproj" />
     <ProjectReference Include="..\..\building-blocks\NSE.WebAPI.Core\NSE.WebAPI.Core.csproj" />
+    <ProjectReference Include="..\NSE.Pedidos.Domain\NSE.Pedidos.Domain.csproj" />
     <ProjectReference Include="..\NSE.Pedidos.Infra\NSE.Pedidos.Infra.csproj" />
   </ItemGroup>
 
