--- a/src/services/NSE.Carrinho.Api/appsettings.Development.json
+++ b/src/services/NSE.Carrinho.Api/appsettings.Development.json
@@ -14,5 +14,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   }
 }
