Entendendo o Gateway de pagamento

--- a/src/services/NSE.Pagamento.Api/Properties/launchSettings.json
+++ b/src/services/NSE.Pagamento.Api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "NSE.Pagamento.Api": {
+    "NSE.Pagamentos.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
