--- a/src/services/NSE.Catalogo.Api/appsettings.Development.json
+++ b/src/services/NSE.Catalogo.Api/appsettings.Development.json
@@ -1,13 +1,16 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-49TFGL4;Database=NerdStoreEnterpriseDB;Integrated Security=True"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-49TFGL4;Database=NerdStoreEnterpriseDB;Integrated Security=True"
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   },
   "AppSettings": {
     "Secret": "MEUSEGREDOSUPERSECRETO",
