--- a/src/web/NSE.WebApp.MVC/NSE.WebApp.MVC.csproj
+++ b/src/web/NSE.WebApp.MVC/NSE.WebApp.MVC.csproj
@@ -9,6 +9,32 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Views\Carrinho\Index.cshtml" />
+    <None Include="Views\Catalogo\Index.cshtml" />
+    <None Include="Views\Catalogo\ProdutoDetalhe.cshtml" />
+    <None Include="Views\Home\Index.cshtml" />
+    <None Include="Views\Home\Privacy.cshtml" />
+    <None Include="Views\Identidade\Login.cshtml" />
+    <None Include="Views\Identidade\Registro.cshtml" />
+    <None Include="Views\Pedido\ConfirmacaoPedido.cshtml" />
+    <None Include="Views\Pedido\EnderecoEntrega.cshtml" />
+    <None Include="Views\Pedido\MeusPedidos.cshtml" />
+    <None Include="Views\Pedido\Pagamento.cshtml" />
+    <None Include="Views\Pedido\_Endereco.cshtml" />
+    <None Include="Views\Pedido\_NovoEndereco.cshtml" />
+    <None Include="Views\Pedido\_ResumoFinanceiro.cshtml" />
+    <None Include="Views\Shared\Components\Carrinho\Default.cshtml" />
+    <None Include="Views\Shared\Components\Summary\Default.cshtml" />
+    <None Include="Views\Shared\Error.cshtml" />
+    <None Include="Views\Shared\_Layout.cshtml" />
+    <None Include="Views\Shared\_LoginPartial.cshtml" />
+    <None Include="Views\Shared\_ValidationScriptsPartial.cshtml" />
+    <None Include="Views\_ViewImports.cshtml" />
+    <None Include="Views\_ViewStart.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Grpc.Core.Api" Version="2.31.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
