Implementando o JWK nas demais API's

--- a/src/services/NSE.Carrinho.Api/appsettings.Development.json
+++ b/src/services/NSE.Carrinho.Api/appsettings.Development.json
@@ -2,12 +2,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-49TFGL4;Database=NerdStoreEnterpriseDB;Integrated Security=True"
   },
-  "AppSettings": {
-    "Secret": "MEUSEGREDOSUPERSECRETO",
-    "ExpiracaoHoras": 2,
-    "Emissor": "MeuSistema",
-    "ValidoEm": "https://localhost"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -17,5 +11,8 @@
   },
   "MessageQueueConnection": {
     "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
+  "AppSettings": {
+    "AutenticacaoJwksUrl": "https://localhost:44350/jwks"
   }
 }
