--- a/src/services/NSE.Pagamento.Api/appsettings.Development.json
+++ b/src/services/NSE.Pagamento.Api/appsettings.Development.json
@@ -12,14 +12,11 @@
   "MessageQueueConnection": {
     "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   },
-  "AppSettings": {
-    "Secret": "MEUSEGREDOSUPERSECRETO",
-    "ExpiracaoHoras": 2,
-    "Emissor": "MeuSistema",
-    "ValidoEm": "https://localhost"
-  },
   "PagamentoConfig": {
     "DefaultApiKey": "ak_ewr4dsWehiwAT",
     "DefaultEncryptionKey": "ek_SweRsdFas4uT5"
+  },
+  "AppSettings": {
+    "AutenticacaoJwksUrl": "https://localhost:44350/jwks"
   }
 }
