--- a/src/services/NSE.Pedido.Api/appsettings.Development.json
+++ b/src/services/NSE.Pedido.Api/appsettings.Development.json
@@ -9,13 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AppSettings": {
-    "Secret": "MEUSEGREDOSUPERSECRETO",
-    "ExpiracaoHoras": 2,
-    "Emissor": "MeuSistema",
-    "ValidoEm": "https://localhost"
-  },
   "MessageQueueConnection": {
     "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
+  "AppSettings": {
+    "AutenticacaoJwksUrl": "https://localhost:44350/jwks"
   }
 }
