Implementando um gRPC Server - pt II

--- a/src/services/NSE.Carrinho.Api/NSE.Carrinho.Api.csproj
+++ b/src/services/NSE.Carrinho.Api/NSE.Carrinho.Api.csproj
@@ -24,4 +24,8 @@
   </ItemGroup>
 
 
+  <ItemGroup>
+    <Protobuf Include="Protos\carrinho.proto" GrpcServices="Server" />
+  </ItemGroup>
+
 </Project>
