--- a/src/api gateways/NSE.Bff.Compras/NSE.Bff.Compras.csproj
+++ b/src/api gateways/NSE.Bff.Compras/NSE.Bff.Compras.csproj
@@ -10,6 +10,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+
+    <PackageReference Include="Google.Protobuf" Version="3.12.4" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.30.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.31.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,5 +23,9 @@
     <ProjectReference Include="..\..\building-blocks\NSE.WebAPI.Core\NSE.WebAPI.Core.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Protobuf Include="..\..\services\NSE.Carrinho.Api\Protos\carrinho.proto" GrpcServices="Client" />
+  </ItemGroup>
 
 </Project>
